remove color from rollable elements, fix actor header flex alignment, remove roll element, add npc attribute select styling, padding to cargo header, adjust tweaks footer

--- a/css/railers.css
+++ b/css/railers.css
@@ -7,7 +7,6 @@
 }
 
 .rollable:hover, .rollable:focus {
-  color: #000;
   text-shadow: 0 0 10px red;
   cursor: pointer;
 }
@@ -366,7 +365,7 @@ button.fa-circle.control[data-tool="foreground"] {
   display: flex;
   flex-direction: row;
   gap: 12px;
-  align-items: center;
+  align-items: flex-start;
   flex-wrap: wrap;
 }
 
@@ -397,16 +396,6 @@ button.fa-circle.control[data-tool="foreground"] {
 
 .railers label.checkbox {
   font-size: 14px;
-}
-
-.railers label.roll:hover {
-  text-shadow: 0 0 10px red;
-  cursor: pointer;
-}
-
-.railers label.roll[data-rollable="false"]:hover {
-  text-shadow: none;
-  cursor: default;
 }
 
 /* ==================== ACTOR SHEET - ATTRIBUTES & SKILLS TAB ==================== */
@@ -790,6 +779,26 @@ section.tab.biography.active > prose-mirror {
   justify-content: center;
 }
 
+/* CARGO TAB */
+
+.cargo-header {
+  margin-top: 10px;
+}
+
+/* ==================== ACTOR SHEET - NPC ==================== */
+
+.railers .npc-attribute-selects {
+  display: flex;
+  flex-direction: column;
+  gap: 2px;
+  margin-top: 4px;
+}
+
+.railers .optional-attribute {
+  opacity: 0.5;
+}
+
+
 /* ==================== ACTOR SHEET - INVENTORY / LIST SECTIONS ==================== */
 
 .railers .resource-label {
@@ -1111,6 +1120,14 @@ section.tab.biography.active > prose-mirror {
   height: 50px;
   vertical-align: middle;
   border: none;
+}
+
+/* ==================== ACTOR TWEAKS ==================== */
+
+.tweaks-footer {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 10px;
 }
 
 /* ==================== DICE RESULTS ==================== */
